--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
+.cache
+.classpath
+.DS_Store
+.history
+.idea
+.idea_modules
+.project
+.scala_dependencies
+.settings
 *.class
-target/
+*.log
+*~
+/.worksheet/
+classes/
+dist/*
+lib_managed/
 project/
+project/boot/
+project/local-plugins.sbt
+project/plugins/project/
 repl.scala
+src_managed/
+target/
