chore(git): update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
+.cache
+.classpath
+.DS_Store
+.history
+.idea
+.idea_modules
+.project
+.scala_dependencies
+.settings
 *.class
-target/
-project/
+*.log
+*~
+/.worksheet/
+classes/
+dist/*
+lib_managed/
+project/boot/
+project/local-plugins.sbt
+project/plugins/project/
 repl.scala
+src_managed/
+target/
